--- a/app/src/main/res/layout/layout_card_list_item.xml
+++ b/app/src/main/res/layout/layout_card_list_item.xml
@@ -48,6 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/card_title_text_size"
+                    android:textStyle="bold"
                     android:id="@+id/card_title">
                 </TextView>
 
