--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/parent"
-    android:visibility="gone">
+
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,6 +18,7 @@
             android:layout_width="@dimen/card_image_width_large"
             android:layout_height="@dimen/card_image_height_large"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/ic_launcher_background"
@@ -29,6 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="2dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="10dp"
             android:divider="?android:listDivider"
             android:dividerPadding="2.5dp"
@@ -54,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:text="Card Type"
                 android:textSize="@dimen/card_publisher_text_size"></TextView>
+
             <TextView
                 android:id="@+id/card_price_act"
                 android:layout_width="match_parent"
